<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/id"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:inputType="number"
        android:paddingEnd="10dp"
        android:hint="@string/id"/>
    <EditText
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/address"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/address"/>
    <EditText
        android:id="@+id/salary"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:inputType="numberDecimal"
        android:paddingEnd="10dp"
        android:hint="@string/salary"/>
    <EditText
        android:id="@+id/job"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/job"/>

    <Button
        android:id="@+id/save"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>