<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/name"/>
    <TextView
        android:id="@+id/address"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/address"/>
    <TextView
        android:id="@+id/salary"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:layout_below="@id/address"
        android:paddingEnd="10dp"
        android:hint="@string/salary"/>
    <TextView
        android:id="@+id/job"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/salary"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/job"/>
<LinearLayout
    android:id="@+id/buttons_linear"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/job"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:gravity="center">

    <Button
        android:id="@+id/update"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/delete"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>


</RelativeLayout>