<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:layout_marginTop="25dp"
        android:textAllCaps="false"/>



</LinearLayout>